--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ExpressJS/Mongoose callback style RESTFull API example",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha -r dotenv/config"
+    "test": "mocha "
   },
   "repository": {
     "type": "git",
